# WoodyWoodpacker

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile
include/: woody.h
src/: elf64.c  main.c  utils.c
src/asm/: RC4.asm  payload.asm
src/elf/: elf64.c  elf_common.c
